--- a/student.ipynb
+++ b/student.ipynb
@@ -45,6 +45,13 @@
    "source": [
     "# Jake Umholtz "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "don't change anything above my own name"
+   ]
   }
  ],
  "metadata": {
