--- a/student.ipynb
+++ b/student.ipynb
@@ -40,6 +40,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "movie_genre = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/tmdb.movies.csv', index_col=0)\n",
+    "movie_gross = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/bom.movie_gross.csv', index_col=0)\n",
+    "movie_budget = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/tn.movie_budgets.csv', index_col=0)\n",
+    "\n",
+    "conn = sqlite3.connect('zippedData/im.db')\n",
+    "cur = conn.cursor()\n",
+    "pd.read_sql('''SELECT * FROM SQLITE_MASTER;''', conn)\n",
+    "\n",
+    "movie_budget_copy=movie_budget.copy()\n",
+    "\n",
+    "movie_budget_copy['production_budget']=movie_budget['production_budget'].str.replace(\",\",\"\")\n",
+    "\n",
+    "movie_budget_copy['domestic_gross']=movie_budget['domestic_gross'].str.replace(\"$\",\"\")\n",
+    "\n",
+    "movie_budget_copy['worldwide_gross']=movie_budget['worldwide_gross'].str.replace(\"$\",\"\")\n",
+    "\n",
+    "movie_budget_copy\n",
+    "\n",
+    "movie_budget_copy['production_budget'].astype(float)\n",
+    "movie_budget_copy['domestic_gross'].astype(float)\n",
+    "movie_budget_copy['worldwide_gross'].astype(float)\n",
+    "\n",
+    "##part 1 of creating csv out of sql table movie_basics\n",
+    "sql_query = pd.read_sql_query ('''\n",
+    "                               SELECT\n",
+    "                               *\n",
+    "                               FROM movie_basics\n",
+    "                               ''', conn)\n",
+    "sql_query\n",
+    "\n",
+    "##part 2 of creating csv out of sql table movie_basics\n",
+    "basics_df = pd.DataFrame(sql_query, columns = ['movie_id', 'primary_title', 'original_title','start_year','runtime_minutes','genres'])\n",
+    "basics_df\n",
+    "\n",
+    "print(basics_df[basics_df['primary_title'] == 'Avatar'])\n",
+    "\n",
+    "##Maya's code\n",
+    "\n",
+    "movie_gross = pd.read_csv('zippedData/bom.movie_gross.csv')\n",
+    "rt_movie_info = pd.read_csv('zippedData/rt.movie_info.csv')\n",
+    "rt_review = pd.read_csv('zippedData/rt.reviews.csv', encoding='unicode_escape')\n",
+    "tn_movie_budgets = pd.read_csv('zippedData/tn.movie_budgets.csv')\n",
+    "tmdb_movies = pd.read_csv('zippedData/tmdb.movies.csv', index_col=0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#determining the average profit\n",
+    "#drama\n",
+    "movie_genre = rt_movie_info[['genre','box_office']]\n",
+    "drama = rt_movie_info.loc[rt_movie_info['genre'] == 'Drama']\n",
+    "drama_profit = drama ['box_office']\n",
+    "drama_profit_clean = drama_profit.dropna()\n",
+    "drama_avg_profit = sum (drama_profit_clean)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -63,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
