--- a/student.ipynb
+++ b/student.ipynb
@@ -26,6 +26,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6750000.0"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "movie_gross = pd.read_csv('zippedData/bom.movie_gross.csv')\n",
+    "rt_movie_info = pd.read_csv('zippedData/rt.movie_info.csv')\n",
+    "rt_review = pd.read_csv('zippedData/rt.reviews.csv', encoding='unicode_escape')\n",
+    "tn_movie_budgets = pd.read_csv('zippedData/tn.movie_budgets.csv')\n",
+    "tmdb_movies = pd.read_csv('zippedData/tmdb.movies.csv', index_col=0)\n",
+    "\n",
+    "movie_genre = rt_movie_info[['genre','box_office']]\n",
+    "clean_genre = movie_genre.dropna()\n",
+    "genres_sorted = movie_genre['genre'].sort_values().dropna()\n",
+    "genres_sorted.value_counts().head (30)\n",
+    "#using this data, the main six categories include: drama, comedy, horror, action, romance, and classics\n",
+    "\n",
+    "#determining the average revenue\n",
+    "\n",
+    "#drama\n",
+    "drama = clean_genre[clean_genre['genre'].str.contains('Drama')]\n",
+    "drama_revenue = drama ['box_office']\n",
+    "drama_revenue_clean = drama_revenue.dropna()\n",
+    "drama_avg_revenue = np.mean(drama_revenue_clean)\n",
+    "drama_avg_revenue\n",
+    "\n",
+    "#comedy\n",
+    "comedy = clean_genre[clean_genre['genre'].str.contains('Comedy')]\n",
+    "comedy_revenue = comedy ['box_office']\n",
+    "comedy_revenue_clean = comedy_revenue.dropna()\n",
+    "comedy_avg_revenue = np.mean(comedy_revenue_clean)\n",
+    "comedy_avg_revenue \n",
+    "\n",
+    "#action \n",
+    "horror = clean_genre[clean_genre['genre'].str.contains('Action')]\n",
+    "action_revenue = action ['box_office']\n",
+    "action_revenue_clean = action_revenue.dropna()\n",
+    "action_avg_revenue = np.mean(action_revenue_clean)\n",
+    "action_avg_revenue \n",
+    "\n",
+    "#horror\n",
+    "horror = clean_genre[clean_genre['genre'].str.contains('Horror')]\n",
+    "horror_revenue = horror ['box_office']\n",
+    "horror_revenue_clean = horror_revenue.dropna()\n",
+    "horror_avg_revenue = np.mean(horror_revenue_clean)\n",
+    "horror_avg_revenue\n",
+    "\n",
+    "#romance\n",
+    "romance = clean_genre[clean_genre['genre'].str.contains('Romance')]\n",
+    "romance_revenue = horror ['box_office']\n",
+    "romance_revenue_clean = romance_revenue.dropna()\n",
+    "romance_avg_revenue = np.mean(romance_revenue_clean)\n",
+    "romance_avg_revenue\n",
+    "\n",
+    "#classics\n",
+    "classics = clean_genre[clean_genre['genre'].str.contains('Classics')]\n",
+    "classic_revenue = classics ['box_office']\n",
+    "classic_revenue_clean = classic_revenue.dropna()\n",
+    "classic_avg_revenue = np.mean(classic_revenue_clean)\n",
+    "classic_avg_revenue\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
