--- a/student.ipynb
+++ b/student.ipynb
@@ -41,22 +41,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>name</th>\n",
+       "      <th>tbl_name</th>\n",
+       "      <th>rootpage</th>\n",
+       "      <th>sql</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>table</td>\n",
+       "      <td>movie_basics</td>\n",
+       "      <td>movie_basics</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CREATE TABLE \"movie_basics\" (\\n\"movie_id\" TEXT...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>table</td>\n",
+       "      <td>directors</td>\n",
+       "      <td>directors</td>\n",
+       "      <td>3</td>\n",
+       "      <td>CREATE TABLE \"directors\" (\\n\"movie_id\" TEXT,\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>table</td>\n",
+       "      <td>known_for</td>\n",
+       "      <td>known_for</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CREATE TABLE \"known_for\" (\\n\"person_id\" TEXT,\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>table</td>\n",
+       "      <td>movie_akas</td>\n",
+       "      <td>movie_akas</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CREATE TABLE \"movie_akas\" (\\n\"movie_id\" TEXT,\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>table</td>\n",
+       "      <td>movie_ratings</td>\n",
+       "      <td>movie_ratings</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CREATE TABLE \"movie_ratings\" (\\n\"movie_id\" TEX...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>table</td>\n",
+       "      <td>persons</td>\n",
+       "      <td>persons</td>\n",
+       "      <td>7</td>\n",
+       "      <td>CREATE TABLE \"persons\" (\\n\"person_id\" TEXT,\\n ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>table</td>\n",
+       "      <td>principals</td>\n",
+       "      <td>principals</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CREATE TABLE \"principals\" (\\n\"movie_id\" TEXT,\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>table</td>\n",
+       "      <td>writers</td>\n",
+       "      <td>writers</td>\n",
+       "      <td>9</td>\n",
+       "      <td>CREATE TABLE \"writers\" (\\n\"movie_id\" TEXT,\\n  ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    type           name       tbl_name  rootpage  \\\n",
+       "0  table   movie_basics   movie_basics         2   \n",
+       "1  table      directors      directors         3   \n",
+       "2  table      known_for      known_for         4   \n",
+       "3  table     movie_akas     movie_akas         5   \n",
+       "4  table  movie_ratings  movie_ratings         6   \n",
+       "5  table        persons        persons         7   \n",
+       "6  table     principals     principals         8   \n",
+       "7  table        writers        writers         9   \n",
+       "\n",
+       "                                                 sql  \n",
+       "0  CREATE TABLE \"movie_basics\" (\\n\"movie_id\" TEXT...  \n",
+       "1  CREATE TABLE \"directors\" (\\n\"movie_id\" TEXT,\\n...  \n",
+       "2  CREATE TABLE \"known_for\" (\\n\"person_id\" TEXT,\\...  \n",
+       "3  CREATE TABLE \"movie_akas\" (\\n\"movie_id\" TEXT,\\...  \n",
+       "4  CREATE TABLE \"movie_ratings\" (\\n\"movie_id\" TEX...  \n",
+       "5  CREATE TABLE \"persons\" (\\n\"person_id\" TEXT,\\n ...  \n",
+       "6  CREATE TABLE \"principals\" (\\n\"movie_id\" TEXT,\\...  \n",
+       "7  CREATE TABLE \"writers\" (\\n\"movie_id\" TEXT,\\n  ...  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
     "\n",
-    "movie_genre = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/tmdb.movies.csv', index_col=0)\n",
-    "movie_gross = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/bom.movie_gross.csv', index_col=0)\n",
-    "movie_budget = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/tn.movie_budgets.csv', index_col=0)\n",
     "\n",
-    "conn = sqlite3.connect('zippedData/im.db')\n",
+    "conn = sqlite3.connect('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/im.db')\n",
     "cur = conn.cursor()\n",
     "pd.read_sql('''SELECT * FROM SQLITE_MASTER;''', conn)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>primary_title</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>runtime_minutes</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0063540</td>\n",
+       "      <td>Sunghursh</td>\n",
+       "      <td>Sunghursh</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Action,Crime,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0066787</td>\n",
+       "      <td>One Day Before the Rainy Season</td>\n",
+       "      <td>Ashad Ka Ek Din</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>Biography,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0069049</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0069204</td>\n",
+       "      <td>Sabse Bada Sukh</td>\n",
+       "      <td>Sabse Bada Sukh</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Comedy,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0100275</td>\n",
+       "      <td>The Wandering Soap Opera</td>\n",
+       "      <td>La Telenovela Errante</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Comedy,Drama,Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146139</th>\n",
+       "      <td>tt9916538</td>\n",
+       "      <td>Kuambil Lagi Hatiku</td>\n",
+       "      <td>Kuambil Lagi Hatiku</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146140</th>\n",
+       "      <td>tt9916622</td>\n",
+       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
+       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146141</th>\n",
+       "      <td>tt9916706</td>\n",
+       "      <td>Dankyavar Danka</td>\n",
+       "      <td>Dankyavar Danka</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146142</th>\n",
+       "      <td>tt9916730</td>\n",
+       "      <td>6 Gunn</td>\n",
+       "      <td>6 Gunn</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146143</th>\n",
+       "      <td>tt9916754</td>\n",
+       "      <td>Chico Albuquerque - Revelações</td>\n",
+       "      <td>Chico Albuquerque - Revelações</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>146144 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         movie_id                                primary_title  \\\n",
+       "0       tt0063540                                    Sunghursh   \n",
+       "1       tt0066787              One Day Before the Rainy Season   \n",
+       "2       tt0069049                   The Other Side of the Wind   \n",
+       "3       tt0069204                              Sabse Bada Sukh   \n",
+       "4       tt0100275                     The Wandering Soap Opera   \n",
+       "...           ...                                          ...   \n",
+       "146139  tt9916538                          Kuambil Lagi Hatiku   \n",
+       "146140  tt9916622  Rodolpho Teóphilo - O Legado de um Pioneiro   \n",
+       "146141  tt9916706                              Dankyavar Danka   \n",
+       "146142  tt9916730                                       6 Gunn   \n",
+       "146143  tt9916754               Chico Albuquerque - Revelações   \n",
+       "\n",
+       "                                     original_title  start_year  \\\n",
+       "0                                         Sunghursh        2013   \n",
+       "1                                   Ashad Ka Ek Din        2019   \n",
+       "2                        The Other Side of the Wind        2018   \n",
+       "3                                   Sabse Bada Sukh        2018   \n",
+       "4                             La Telenovela Errante        2017   \n",
+       "...                                             ...         ...   \n",
+       "146139                          Kuambil Lagi Hatiku        2019   \n",
+       "146140  Rodolpho Teóphilo - O Legado de um Pioneiro        2015   \n",
+       "146141                              Dankyavar Danka        2013   \n",
+       "146142                                       6 Gunn        2017   \n",
+       "146143               Chico Albuquerque - Revelações        2013   \n",
+       "\n",
+       "        runtime_minutes                genres  \n",
+       "0                 175.0    Action,Crime,Drama  \n",
+       "1                 114.0       Biography,Drama  \n",
+       "2                 122.0                 Drama  \n",
+       "3                   NaN          Comedy,Drama  \n",
+       "4                  80.0  Comedy,Drama,Fantasy  \n",
+       "...                 ...                   ...  \n",
+       "146139            123.0                 Drama  \n",
+       "146140              NaN           Documentary  \n",
+       "146141              NaN                Comedy  \n",
+       "146142            116.0                  None  \n",
+       "146143              NaN           Documentary  \n",
+       "\n",
+       "[146144 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql_query = pd.read_sql_query ('''\n",
+    "                               SELECT\n",
+    "                               *\n",
+    "                               FROM movie_basics\n",
+    "                               ''', conn)\n",
+    "sql_query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_genre = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/tmdb.movies.csv', index_col=0)\n",
+    "movie_gross = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/bom.movie_gross.csv', index_col=0)\n",
+    "movie_budget = pd.read_csv('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/tn.movie_budgets.csv', index_col=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "movie_budget_copy=movie_budget.copy()\n",
     "\n",
     "movie_budget_copy['production_budget']=movie_budget['production_budget'].str.replace(\",\",\"\")\n",
