--- a/student.ipynb
+++ b/student.ipynb
@@ -41,8 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -163,7 +165,7 @@
        "7  CREATE TABLE \"writers\" (\\n\"movie_id\" TEXT,\\n  ...  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,11 +175,48 @@
     "import pandas as pd\n",
     "\n",
     "\n",
+    "movie_gross = pd.read_csv('zippedData/bom.movie_gross.csv')\n",
+    "rt_movie_info = pd.read_csv('zippedData/rt.movie_info.csv')\n",
+    "rt_review = pd.read_csv('zippedData/rt.reviews.csv', encoding='unicode_escape')\n",
+    "tn_movie_budgets = pd.read_csv('zippedData/tn.movie_budgets.csv')\n",
+    "tmdb_movies = pd.read_csv('zippedData/tmdb.movies.csv', index_col=0)\n",
+    "\n",
     "\n",
     "conn = sqlite3.connect('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/im.db')\n",
     "cur = conn.cursor()\n",
     "pd.read_sql('''SELECT * FROM SQLITE_MASTER;''', conn)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              NaN\n",
+       "1          600,000\n",
+       "2              NaN\n",
+       "3              NaN\n",
+       "4              NaN\n",
+       "           ...    \n",
+       "1555    33,886,034\n",
+       "1556           NaN\n",
+       "1557           NaN\n",
+       "1558           NaN\n",
+       "1559           NaN\n",
+       "Name: box_office, Length: 1560, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rt_movie_info['box_office']"
    ]
   },
   {
@@ -368,12 +407,206 @@
     }
    ],
    "source": [
+    "##part 1 of creating csv out of sql table movie_basics\n",
     "sql_query = pd.read_sql_query ('''\n",
     "                               SELECT\n",
     "                               *\n",
     "                               FROM movie_basics\n",
     "                               ''', conn)\n",
     "sql_query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>primary_title</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>runtime_minutes</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0063540</td>\n",
+       "      <td>Sunghursh</td>\n",
+       "      <td>Sunghursh</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Action,Crime,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0066787</td>\n",
+       "      <td>One Day Before the Rainy Season</td>\n",
+       "      <td>Ashad Ka Ek Din</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>Biography,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0069049</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0069204</td>\n",
+       "      <td>Sabse Bada Sukh</td>\n",
+       "      <td>Sabse Bada Sukh</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Comedy,Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0100275</td>\n",
+       "      <td>The Wandering Soap Opera</td>\n",
+       "      <td>La Telenovela Errante</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Comedy,Drama,Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146139</th>\n",
+       "      <td>tt9916538</td>\n",
+       "      <td>Kuambil Lagi Hatiku</td>\n",
+       "      <td>Kuambil Lagi Hatiku</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146140</th>\n",
+       "      <td>tt9916622</td>\n",
+       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
+       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146141</th>\n",
+       "      <td>tt9916706</td>\n",
+       "      <td>Dankyavar Danka</td>\n",
+       "      <td>Dankyavar Danka</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146142</th>\n",
+       "      <td>tt9916730</td>\n",
+       "      <td>6 Gunn</td>\n",
+       "      <td>6 Gunn</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146143</th>\n",
+       "      <td>tt9916754</td>\n",
+       "      <td>Chico Albuquerque - Revelações</td>\n",
+       "      <td>Chico Albuquerque - Revelações</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>146144 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         movie_id                                primary_title  \\\n",
+       "0       tt0063540                                    Sunghursh   \n",
+       "1       tt0066787              One Day Before the Rainy Season   \n",
+       "2       tt0069049                   The Other Side of the Wind   \n",
+       "3       tt0069204                              Sabse Bada Sukh   \n",
+       "4       tt0100275                     The Wandering Soap Opera   \n",
+       "...           ...                                          ...   \n",
+       "146139  tt9916538                          Kuambil Lagi Hatiku   \n",
+       "146140  tt9916622  Rodolpho Teóphilo - O Legado de um Pioneiro   \n",
+       "146141  tt9916706                              Dankyavar Danka   \n",
+       "146142  tt9916730                                       6 Gunn   \n",
+       "146143  tt9916754               Chico Albuquerque - Revelações   \n",
+       "\n",
+       "                                     original_title  start_year  \\\n",
+       "0                                         Sunghursh        2013   \n",
+       "1                                   Ashad Ka Ek Din        2019   \n",
+       "2                        The Other Side of the Wind        2018   \n",
+       "3                                   Sabse Bada Sukh        2018   \n",
+       "4                             La Telenovela Errante        2017   \n",
+       "...                                             ...         ...   \n",
+       "146139                          Kuambil Lagi Hatiku        2019   \n",
+       "146140  Rodolpho Teóphilo - O Legado de um Pioneiro        2015   \n",
+       "146141                              Dankyavar Danka        2013   \n",
+       "146142                                       6 Gunn        2017   \n",
+       "146143               Chico Albuquerque - Revelações        2013   \n",
+       "\n",
+       "        runtime_minutes                genres  \n",
+       "0                 175.0    Action,Crime,Drama  \n",
+       "1                 114.0       Biography,Drama  \n",
+       "2                 122.0                 Drama  \n",
+       "3                   NaN          Comedy,Drama  \n",
+       "4                  80.0  Comedy,Drama,Fantasy  \n",
+       "...                 ...                   ...  \n",
+       "146139            123.0                 Drama  \n",
+       "146140              NaN           Documentary  \n",
+       "146141              NaN                Comedy  \n",
+       "146142            116.0                  None  \n",
+       "146143              NaN           Documentary  \n",
+       "\n",
+       "[146144 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##part 2 of creating csv out of sql table movie_basics\n",
+    "basics_df = pd.DataFrame(sql_query, columns = ['movie_id', 'primary_title', 'original_title','start_year','runtime_minutes','genres'])\n",
+    "basics_df"
    ]
   },
   {
@@ -393,33 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_budget_copy=movie_budget.copy()\n",
     "\n",
-    "movie_budget_copy['production_budget']=movie_budget['production_budget'].str.replace(\",\",\"\")\n",
-    "\n",
-    "movie_budget_copy['domestic_gross']=movie_budget['domestic_gross'].str.replace(\"$\",\"\")\n",
-    "\n",
-    "movie_budget_copy['worldwide_gross']=movie_budget['worldwide_gross'].str.replace(\"$\",\"\")\n",
-    "\n",
-    "movie_budget_copy\n",
-    "\n",
-    "movie_budget_copy['production_budget'].astype(float)\n",
-    "movie_budget_copy['domestic_gross'].astype(float)\n",
-    "movie_budget_copy['worldwide_gross'].astype(float)\n",
-    "\n",
-    "##part 1 of creating csv out of sql table movie_basics\n",
-    "sql_query = pd.read_sql_query ('''\n",
-    "                               SELECT\n",
-    "                               *\n",
-    "                               FROM movie_basics\n",
-    "                               ''', conn)\n",
-    "sql_query\n",
-    "\n",
-    "##part 2 of creating csv out of sql table movie_basics\n",
-    "basics_df = pd.DataFrame(sql_query, columns = ['movie_id', 'primary_title', 'original_title','start_year','runtime_minutes','genres'])\n",
-    "basics_df\n",
-    "\n",
-    "print(basics_df[basics_df['primary_title'] == 'Avatar'])\n",
     "\n",
     "##Maya's code\n",
     "\n",
