data cleaning for run time

--- a/student.ipynb
+++ b/student.ipynb
@@ -154,11 +154,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "trying to do first push"
+   ]
   }
  ],
  "metadata": {
