--- a/student.ipynb
+++ b/student.ipynb
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-16T15:58:22.489868Z",
-     "start_time": "2022-08-16T15:58:22.291459Z"
+     "end_time": "2022-08-17T16:04:06.238314Z",
+     "start_time": "2022-08-17T16:04:06.013989Z"
     }
    },
    "outputs": [
@@ -46,10 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "235\n",
-      "                  runtime_clean  box_office_clean\n",
-      "runtime_clean          1.000000          0.312157\n",
-      "box_office_clean       0.312157          1.000000\n"
+      "235\n"
      ]
     }
    ],
@@ -123,11 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-16T17:28:48.338140Z",
-     "start_time": "2022-08-16T17:28:48.302745Z"
+     "end_time": "2022-08-17T16:04:08.196809Z",
+     "start_time": "2022-08-17T16:04:08.168394Z"
     }
    },
    "outputs": [
@@ -216,6 +213,63 @@
     "\n",
     "#df2['runtime_clean'].plot.box(grid='True')\n",
     "#df2['box_office_clean'].plot.box(grid='True')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-17T16:29:04.798590Z",
+     "start_time": "2022-08-17T16:29:04.787694Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-critical value: -1.6513914747179255\n",
+      "Test statistic: 1.6513914747179248\n",
+      "0.025000000000060495\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 235\n",
+    "df = n - 1\n",
+    "\n",
+    "t_crit = stats.t.ppf(0.05, 234)\n",
+    "print('T-critical value:', t_crit)\n",
+    "\n",
+    "t = stats.t.ppf(q=1-(0.05/2), df=234)\n",
+    "print('Test statistic:', ttest_results)\n",
+    "\n",
+    "p_value = stats.t.sf(t, df=234)\n",
+    "print(p_value)\n",
+    "\n",
+    "\n",
+    "x = np.linspace(-5, 5, 200)\n",
+    "y = stats.t.pdf(x, df, 0, 1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Set up figure and axes\n",
+    "#fig, ax = plt.subplots(figsize=(8,5))\n",
+    "\n",
+    "# Plot the PDF as a line graph# (x and y were created in previous plotting code)\n",
+    "#ax.plot(x, y, color='darkblue', label=\"t-distribution PDF\")\n",
+    "\n",
+    "# Plot a vertical line for our critical t-value\n",
+    "#ax.axvline(t_crit,color='green',linestyle='--',lw=4,label='critical t-value')\n",
+    "\n",
+    "# Fill area under line graph where x value is creater than critical t\n",
+    "#ax.fill_betweenx(y,x,t_crit,where=x > t_crit,color=\"gray\",label=\"rejection region\")\n",
+    "\n",
+    "# Plot a vertical line for our measured difference in sales t-statistic\n",
+    "#ax.axvline(t, color='red', linestyle='--', lw=5,label='observed t-statistic')\n",
+    "\n",
+    "#ax.legend();"
    ]
   },
   {
