added comments to code

--- a/student.ipynb
+++ b/student.ipynb
@@ -34,24 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-17T16:04:06.238314Z",
-     "start_time": "2022-08-17T16:04:06.013989Z"
+     "end_time": "2022-08-17T18:57:06.113712Z",
+     "start_time": "2022-08-17T18:57:05.917882Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "235\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import csv\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -75,13 +66,11 @@
     "ratings = []\n",
     "for rating in rt_movie_info['rating'].dropna():\n",
     "    ratings.append(rating)\n",
-    "#print(ratings)\n",
-    "print(len(ratings))\n",
     "\n",
-    "runtime_raw = []\n",
-    "runtime_clean = []\n",
-    "box_off_raw = []\n",
-    "box_off_clean = []\n",
+    "runtime_raw = [] #for freshly-extracted runtimes\n",
+    "runtime_clean = [] #rfor runtime w/o whitespace\n",
+    "box_off_raw = [] #for raw box office sales data\n",
+    "box_off_clean = [] #for box office sales data without commas or whitespace\n",
     "for val in rt_movie_info['runtime'].str[:3]: #extract first 3 characters, movies under 100 min will have whitespace\n",
     "    runtime_raw.append(val) \n",
     "for val in runtime_raw: #strip whitespace\n",
@@ -92,39 +81,26 @@
     "    box_off_strip = val.replace(',', '')\n",
     "    box_off_clean.append(box_off_strip)\n",
     "\n",
+    "#create new column 'runtime_clean'\n",
     "rt_movie_info['runtime_clean'] = runtime_clean\n",
+    "#create new column 'box_office_clean'\n",
     "rt_movie_info['box_office_clean'] = box_off_clean\n",
     "\n",
+    "#create new dataframe\n",
     "df2 = rt_movie_info[['runtime_clean','box_office_clean']].copy()\n",
+    "#ensure runtime valuse are recognized as integers\n",
     "df2['runtime_clean'] = df2['runtime_clean'].astype(int)\n",
-    "df2['box_office_clean'] = df2['box_office_clean'].astype(int)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#print(len(runtime))\n",
-    "#drop currency, box_office, studio\n",
-    "\n",
-    "#rt_movie_info.dropna(subset=['currency'])\n",
-    "#rt_movie_info.info()\n",
-    "\n",
-    "#print(rt_reviews.info())\n",
-    "#Clean review, rating, fresh, critic, top_critic, publisher, date\n",
-    "\n",
-    "\n",
-    "#print(tn_movie_budgets.info())\n",
-    "#Nothing to clean\n",
-    "\n",
-    "#print(tmdb_movies.info())\n",
-    "#Nothing to clean"
+    "#ensure box office slaes values are recognized as integers\n",
+    "df2['box_office_clean'] = df2['box_office_clean'].astype(int)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-17T18:21:11.986470Z",
-     "start_time": "2022-08-17T18:21:11.964542Z"
+     "end_time": "2022-08-17T18:57:12.002043Z",
+     "start_time": "2022-08-17T18:57:11.977548Z"
     }
    },
    "outputs": [
@@ -167,6 +143,7 @@
     }
    ],
    "source": [
+    "#Descriptive Stats for Runtime\n",
     "max1 = df2['runtime_clean'].max()\n",
     "Q1_3 = df2['runtime_clean'].quantile(q=0.75)\n",
     "mean1 = df2['runtime_clean'].mean()\n",
@@ -189,7 +166,7 @@
     "print('99.7% of observations should lay between:', mean1-(std1*3), '-',mean1+(std1*3))\n",
     "\n",
     "print('') #for readability\n",
-    "print('Descriptive Statistics for Box Office Sales')\n",
+    "#Descriptive Stats for Box Office Sales\n",
     "mean2 = df2['box_office_clean'].mean()\n",
     "max2 = df2['box_office_clean'].max()\n",
     "Q2_3 = df2['box_office_clean'].quantile(q=0.75)\n",
@@ -198,6 +175,7 @@
     "min2 = df2['box_office_clean'].min()\n",
     "std2 = df2['box_office_clean'].std()\n",
     "\n",
+    "print('Descriptive Statistics for Box Office Sales')\n",
     "print('Mean box office sales:', mean2)\n",
     "print('')\n",
     "print('Maximum sales:', max2)\n",
@@ -251,11 +229,12 @@
     }
    ],
    "source": [
-    "n = 235\n",
-    "df = n - 1\n",
+    "n = 235 #sample size\n",
+    "df = n - 1 #degrees of freedom = sample size - 1\n",
     "\n",
-    "#test length of movie impact on \n",
+    "#test relationship between movie length over 105 minutes\n",
     "t_ind_runtime = stats.ttest_ind(df2more['runtime_clean'], df2less['runtime_clean'])\n",
+    "#test box_office_sales in movies over 505\n",
     "t_ind_sales = stats.ttest_ind(df2more['box_office_clean'], df2less['box_office_clean'])\n",
     "\n",
     "print('T-Test for Runtime:', t_ind_runtime)\n",
@@ -304,7 +283,7 @@
     }
    ],
    "source": [
-    "sns.distplot(d1)"
+    "sns.distplot(d1) #distribution for runtime"
    ]
   },
   {
@@ -349,7 +328,7 @@
     }
    ],
    "source": [
-    "sns.distplot(d2)"
+    "sns.distplot(d2) #distribution for box office sales"
    ]
   },
   {
@@ -396,7 +375,9 @@
     }
    ],
    "source": [
-    "sns.distplot([(x - d1.mean())/d1.std() for x in d1])\n",
+    "#normalized distribution for runtime\n",
+    "sns.distplot([(x - d1.mean())/d1.std() for x in d1]) \n",
+    "#normalized distribution for box office sales\n",
     "sns.distplot([(x - d2.mean())/d2.std() for x in d2])"
    ]
   },
@@ -424,7 +405,7 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots() #Generate Scatter\n",
+    "fig, ax = plt.subplots() #Generate Scatter plot \n",
     "\n",
     "ax.scatter(df2['runtime_clean'], df2['box_office_clean'], label=\"actual data\")\n",
     "\n",
@@ -486,136 +467,6 @@
     "plt.xlabel('MPAA Ratings')\n",
     "plt.ylabel('Sales in USD (Billions)')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-08-16T13:48:14.573372Z",
-     "start_time": "2022-08-16T13:48:14.204423Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>primary_title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tt0063540</td>\n",
-       "      <td>Sunghursh</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tt0066787</td>\n",
-       "      <td>One Day Before the Rainy Season</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>tt0069049</td>\n",
-       "      <td>The Other Side of the Wind</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>tt0069204</td>\n",
-       "      <td>Sabse Bada Sukh</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>tt0100275</td>\n",
-       "      <td>The Wandering Soap Opera</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146139</th>\n",
-       "      <td>tt9916538</td>\n",
-       "      <td>Kuambil Lagi Hatiku</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146140</th>\n",
-       "      <td>tt9916622</td>\n",
-       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146141</th>\n",
-       "      <td>tt9916706</td>\n",
-       "      <td>Dankyavar Danka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146142</th>\n",
-       "      <td>tt9916730</td>\n",
-       "      <td>6 Gunn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146143</th>\n",
-       "      <td>tt9916754</td>\n",
-       "      <td>Chico Albuquerque - Revelações</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>146144 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         movie_id                                primary_title\n",
-       "0       tt0063540                                    Sunghursh\n",
-       "1       tt0066787              One Day Before the Rainy Season\n",
-       "2       tt0069049                   The Other Side of the Wind\n",
-       "3       tt0069204                              Sabse Bada Sukh\n",
-       "4       tt0100275                     The Wandering Soap Opera\n",
-       "...           ...                                          ...\n",
-       "146139  tt9916538                          Kuambil Lagi Hatiku\n",
-       "146140  tt9916622  Rodolpho Teóphilo - O Legado de um Pioneiro\n",
-       "146141  tt9916706                              Dankyavar Danka\n",
-       "146142  tt9916730                                       6 Gunn\n",
-       "146143  tt9916754               Chico Albuquerque - Revelações\n",
-       "\n",
-       "[146144 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sqlite3\n",
-    "\n",
-    "#Connect SQLITE3 to im.db database file\n",
-    "conn = sqlite3.connect('zippedData/im.db')\n",
-    "cur = conn.cursor()\n",
-    "#print(pd.read_sql('''SELECT * FROM SQLITE_MASTER;''', conn))\n",
-    "pd.read_sql('''SELECT movie_id, primary_title FROM movie_basics''', conn)\n",
-    "#pd.read_sql('''SELECT * FROM movie_ratings;''', conn)\n",
-    "#pd.read_sql('''SELECT * FROM MOVIE_BASICS;''', conn)"
    ]
   },
   {
