Final change, t-test, changed CI to 95%

--- a/student.ipynb
+++ b/student.ipynb
@@ -96,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 125,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-17T20:23:19.915328Z",
-     "start_time": "2022-08-17T20:23:19.886872Z"
+     "end_time": "2022-08-17T21:52:59.856040Z",
+     "start_time": "2022-08-17T21:52:59.821517Z"
     }
    },
    "outputs": [
@@ -118,7 +118,7 @@
       "Minimum runtime: 67\n",
       "Interquartile Range: 24.0\n",
       "Std. Dev. of runtime: 18.147124581299227\n",
-      "99.7% of observations should lay between: 52.22245604333635 - 161.10520353113174\n",
+      "99.7% of observations should lay between: 70.36958062463557 - 142.9580789498325\n",
       "\n",
       "Descriptive Statistics for Box Office Sales\n",
       "Mean box office sales: 41958400.02127659\n",
@@ -130,7 +130,7 @@
       "Minimum sales: 363\n",
       "Std. Dev of Sales: 62630155.51836797\n",
       "Interquartile Range: 50347078.0\n",
-      "99.7% of observations should lay between: -145932066.5338273 - 229848866.5763805\n",
+      "99.7% of observations should lay between: -83301911.01545934 - 139206163961.8349\n",
       "\n",
       "Correlation Coefficient\n",
       "                  runtime_clean  box_office_clean\n",
@@ -163,7 +163,7 @@
     "print('Interquartile Range:', Q1_3-Q1_1)\n",
     "print('Std. Dev. of runtime:', std1)\n",
     "\n",
-    "print('99.7% of observations should lay between:', mean1-(std1*3), '-',mean1+(std1*3))\n",
+    "print('99.7% of observations should lay between:', mean1-(std1*2), '-',mean1+(std1*2))\n",
     "\n",
     "print('') #for readability\n",
     "#Descriptive Stats for Box Office Sales\n",
@@ -185,7 +185,7 @@
     "print('Minimum sales:', min2)\n",
     "print('Std. Dev of Sales:', std2)\n",
     "print('Interquartile Range:', Q2_3-Q2_1)\n",
-    "print('99.7% of observations should lay between:', mean2-(std2*3), '-', mean2+(std2*3))\n",
+    "print('99.7% of observations should lay between:', mean2-(std2*2), '-', mean2+(std2*2222))\n",
     "\n",
     "print('') #for readability\n",
     "print('Correlation Coefficient')      \n",
@@ -211,11 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 130,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-17T20:23:43.112701Z",
-     "start_time": "2022-08-17T20:23:43.087952Z"
+     "end_time": "2022-08-17T21:58:50.694318Z",
+     "start_time": "2022-08-17T21:58:50.668909Z"
     }
    },
    "outputs": [
@@ -232,9 +232,115 @@
       "box_office_clean    1.802465e+15\n",
       "dtype: float64\n",
       "\n",
-      "T-Test more: Ttest_indResult(statistic=-7.937787765100342, pvalue=1.6491519375273418e-12)\n",
-      "T-Test less: Ttest_indResult(statistic=-7.106925221623543, pvalue=1.0672575865859792e-10)\n"
+      "T-Test runtime: Ttest_indResult(statistic=19.119590244740635, pvalue=2.419161504367383e-43)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>runtime_clean</th>\n",
+       "      <th>box_office_clean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>108</td>\n",
+       "      <td>600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>82</td>\n",
+       "      <td>41032915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>123</td>\n",
+       "      <td>224114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>108</td>\n",
+       "      <td>1039869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>127</td>\n",
+       "      <td>20518224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1530</th>\n",
+       "      <td>126</td>\n",
+       "      <td>72700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1537</th>\n",
+       "      <td>123</td>\n",
+       "      <td>1320005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1541</th>\n",
+       "      <td>119</td>\n",
+       "      <td>25335935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1542</th>\n",
+       "      <td>129</td>\n",
+       "      <td>1416189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1545</th>\n",
+       "      <td>98</td>\n",
+       "      <td>59371</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>235 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      runtime_clean  box_office_clean\n",
+       "1               108            600000\n",
+       "6                82          41032915\n",
+       "7               123            224114\n",
+       "15              108           1039869\n",
+       "18              127          20518224\n",
+       "...             ...               ...\n",
+       "1530            126          72700000\n",
+       "1537            123           1320005\n",
+       "1541            119          25335935\n",
+       "1542            129           1416189\n",
+       "1545             98             59371\n",
+       "\n",
+       "[235 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -247,12 +353,12 @@
     "print(df2less.var())\n",
     "print('')\n",
     "#test relationship between movie length over 105 minutes\n",
-    "t_ind_more = stats.ttest_ind(df2more['runtime_clean'], df2more['box_office_clean'], equal_var=False)\n",
-    "#test box_office_sales in movies over 505\n",
-    "t_ind_less = stats.ttest_ind(df2less['runtime_clean'], df2less['box_office_clean'], equal_var=False)\n",
+    "t_ind_runtime = stats.ttest_ind(df2more['runtime_clean'], df2less['runtime_clean'], equal_var=False)\n",
     "\n",
-    "print('T-Test more:', t_ind_more)\n",
-    "print('T-Test less:', t_ind_less)\n"
+    "print('T-Test runtime:', t_ind_runtime)\n",
+    "\n",
+    "\n",
+    "df2\n"
    ]
   },
   {
